Updates to fix mission on tablets.

--- a/_scss/bbg/pages/_page-about.scss
+++ b/_scss/bbg/pages/_page-about.scss
@@ -74,6 +74,13 @@
 		line-height: 1.9;
 		margin: 0;
 	}
+
+	@include media($medium-large-screen) {
+		p {
+			font-size: 2rem;
+			line-height: 1.9;
+		}
+	}
 }
 
 // Add special excerpt class when there are exactly 5 pages including the Mission (not common but just in case!)
